# fuseji

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.en.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: api.md  design.md
docs/integrations/: faker.md  otel.md  presidio.md
examples/: README.md
examples/custom_recognizer/: README.md  main.py  requirements.txt
examples/ginza/: README.md  main.py  requirements.txt
examples/langfuse_ingestion_callback/: README.md  docker-compose.yml
examples/langfuse_sdk/: README.md  main.py  requirements.txt
examples/otel/: README.md  main.py  mask_processor.py  otel-collector-config.yaml  requirements.txt
examples/presidio/: README.md  requirements.txt  run.py
src/fuseji/: __init__.py  engine.py  entity_types.py  exceptions.py  faker_strategy.py  strategies.py  types.py  vault.py
src/fuseji/integrations/: __init__.py  langfuse.py  otel.py  presidio.py
src/fuseji/ner/: __init__.py  base.py  ginza.py
src/fuseji/recognizers/: __init__.py  base.py  corporate_number.py  credit_card.py  email.py  jp_address.py  jp_phone.py  jp_postal.py  my_number.py
src/fuseji/server/: __init__.py  app.py
tests/: conftest.py  test_engine.py  test_engine_vault_json.py  test_entity_types.py  test_examples_otel_smoke.py  test_faker_strategy.py  test_integrations_langfuse.py  test_integrations_otel.py  test_integrations_presidio.py  test_latency_regression.py  test_ner_base.py  test_ner_ginza.py  test_properties.py  test_public_api.py  test_recognizers_base.py  test_recognizers_corporate_number.py  test_recognizers_credit_card.py  test_recognizers_email.py  test_recognizers_jp_address.py  test_recognizers_jp_phone.py  test_recognizers_jp_postal.py  test_recognizers_my_number.py  test_server.py  test_strategies.py  test_types.py  test_vault.py  test_vault_strategy.py
tests/bench/: README.md  bench_mask_json.py  bench_masker.py  bench_recognizers.py  bench_replace_spans.py  bench_resolve_overlaps.py  bench_strategies.py  bench_v03_recognizers.py  bench_vault.py  conftest.py
