[project]
name = "fuseji"
version = "0.0.0"
description = "日本語特化の PII 検出・マスキングミドルウェア（LLM オブザーバビリティ向け）"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "sserada", email = "serada.dev@gmail.com" },
]
keywords = ["pii", "masking", "japanese", "llm", "observability", "langfuse", "presidio"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
ginza = [
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
all = [
    "fuseji[ginza,server]",
]

[project.urls]
Homepage = "https://github.com/sserada/fuseji"
Repository = "https://github.com/sserada/fuseji"
Issues = "https://github.com/sserada/fuseji/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuseji"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "RUF001", # 全面日本語コードベースのため、文字列内の全角記号を許容
    "RUF002", # docstring 内の全角記号を許容
    "RUF003", # コメント内の全角記号を許容
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # テスト関数・引数名の命名規約を緩和

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
