[project]
name = "fuseji"
version = "0.1.1.dev0"
description = "日本語特化の PII 検出・マスキングミドルウェア（LLM オブザーバビリティ向け）"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "sserada", email = "serada.dev@gmail.com" },
]
keywords = ["pii", "masking", "japanese", "llm", "observability", "langfuse", "presidio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
ginza = [
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
    # spaCy CLI が click を直接 import するが typer 0.26 系では transitive で
    # 引かれないため明示
    "click>=8.4.1",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
faker = [
    "Faker>=24.0",
]
presidio = [
    # Presidio EntityRecognizer アダプタ (#147)
    "presidio-analyzer>=2.2.0",
]
otel = [
    # OpenTelemetry SDK 統合ヘルパ (#161)
    "opentelemetry-api>=1.20",
]
all = [
    "fuseji[ginza,server,faker,presidio,otel]",
]

[project.urls]
Homepage = "https://github.com/sserada/fuseji"
Repository = "https://github.com/sserada/fuseji"
Issues = "https://github.com/sserada/fuseji/issues"
Changelog = "https://github.com/sserada/fuseji/blob/main/CHANGELOG.md"
Documentation = "https://github.com/sserada/fuseji/blob/main/docs/api.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuseji"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "pytest-randomly>=3.15",  # テスト順序依存・hash 順依存の検知 (#169)
    "opentelemetry-sdk>=1.20",  # examples/otel スモークテスト (#171)
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "RUF001", # 全面日本語コードベースのため、文字列内の全角記号を許容
    "RUF002", # docstring 内の全角記号を許容
    "RUF003", # コメント内の全角記号を許容
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # テスト関数・引数名の命名規約を緩和

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
# テストファイル: tests/test_*.py + tests/bench/bench_*.py の両方を収集する
python_files = ["test_*.py", "bench_*.py"]
# 通常のテストに加えて src/fuseji 配下の doctest（公開 API の Example セクション）も
# 収集対象に含める。README/docstring の使用例の回帰を防ぐ。
# core matrix（extras なし）では conftest.py が server/ginza を doctest 収集から除外。
testpaths = ["tests", "src/fuseji"]
# - bench はデフォルトでは時間計測を無効化（lint/test ジョブでの実行時間を節約）。
#   明示的に `--benchmark-enable` を渡したときのみ計測する。
# - `--doctest-modules` で src/fuseji 配下の docstring 内 Example を doctest として実行。
# - coverage はレポートのみ。`--cov-fail-under` ゲートは all-extras を持つ CI ジョブで
#   付与する（core matrix では server/ginza のステートメントを実行できないため、
#   全体での gate は test-extras ジョブに限定する）。
addopts = "--benchmark-disable --doctest-modules --cov=src/fuseji --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
